# meal_manager

./: README.md
backend/: .gitignore  Cargo.toml
backend/backend_main/: Cargo.toml
backend/backend_main/src/: app.rs  graphql.rs  main.rs
backend/storage/: Cargo.toml
backend/storage/migrations/2019-08-31-142123_create_ingredient/: down.sql  up.sql
backend/storage/migrations/2019-08-31-161601_create_receipe/: down.sql  up.sql
backend/storage/src/: lib.rs  models.rs  schema.rs
