[package]
name = "backend_main"
version = "0.1.0"
authors = ["Matthieu <matthieu.zandecki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage" }
actix-web = "*"
futures = "*"
juniper = "*"
serde_json = "*"
env_logger = "*"
diesel = { version = "*", features = [ "postgres", "r2d2" ] }
dotenv = "0.14.1"